[package]
name = "snell-rs"
version = "5.5.0"
edition = "2024"
rust-version = "1.95"
description = "Open-source Snell v5 proxy protocol implementation"
license = "MIT"

[lib]
name = "snell"
path = "src/lib.rs"

[[bin]]
name = "snell-server"
path = "src/bin/server.rs"

[[bin]]
name = "snell-client"
path = "src/bin/client.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
argon2       = "0.5"
aes-gcm      = "0.10"
blake2       = "0.10"
rand         = "0.8"
anyhow       = "1"
tokio-rustls = "0.26"
rcgen        = "0.13"
socket2      = { version = "0.5", features = ["all"] }
libc         = "0.2"
lru          = "0.16"
parking_lot  = "0.12"
tracing      = "0.1"
zeroize      = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
serial_test  = "3"
serde_json   = "1"

# Release builds favor runtime perf and binary size over compile time.
# Trade: cold rebuild goes from ~30s to ~90s on CI, but the binary is
# 5-15% faster on net-bound workloads and noticeably smaller.
[profile.release]
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
